[metadata]
name = builder2
version = attr: builder2.__version__
author = pablintino
author_email = pablintino@gotmail.com
url = https://gitlab.internal.pablintino.net/tools/builder2
description = Example package description
keywords = container, builder
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    certifi==2022.6.15
    cffi==1.15.1
    charset-normalizer==2.1.0
    ConfigArgParse==1.5.3
    cryptography==37.0.4
    dependency-injector==4.39.1
    idna==3.3
    marshmallow==3.17.0
    marshmallow-oneofschema==3.0.1
    packaging==21.3
    pycparser==2.21
    pyparsing==3.0.9
    requests==2.28.1
    six==1.16.0
    urllib3==1.26.10

[options.packages.find]
exclude =
    test*

[options.entry_points]
console_scripts =
    builder2 = builder2.builder2:main

[options.extras_require]
dev =
    black==22.1.0
    pytest==7.1.2