[metadata]
name = builder2
version = attr: builder2.__version__
author = pablintino
author_email = pablintino@gotmail.com
url = https://gitlab.internal.pablintino.net/tools/builder2
description = Example package description
keywords = container, builder
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    certifi==2024.7.4
    cffi==1.17.0
    charset-normalizer==3.3.2
    ConfigArgParse==1.7
    cryptography==43.0.0
    dependency-injector==4.41.0
    idna==3.7
    marshmallow==3.21.3
    marshmallow-oneofschema==3.1.1
    packaging==24.1
    pycparser==2.22
    pyparsing==3.1.2
    pyaml==23.9.7
    requests==2.32.3
    six==1.16.0
    urllib3==2.2.2

[options.packages.find]
exclude =
    test*

[options.entry_points]
console_scripts =
    builder2 = builder2.main:main

[options.extras_require]
dev =
    black==22.1.0
    pytest==7.1.2


