[metadata]
name = builder2
version = attr: builder2.__version__
author = pablintino
author_email = pablintino@gotmail.com
url = https://gitlab.internal.pablintino.net/tools/builder2
description = Example package description
keywords = container, builder
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
packages = find:
zip_safe = True
include_package_data = True
install_requires = file: requirements.txt

[options.packages.find]
exclude =
    test*

[options.entry_points]
console_scripts =
    builder2 = builder2.main:main

[options.extras_require]
dev =
    black==22.1.0
    pytest==7.1.2


